added some paragraphs
found out how to make paragraphs and deleted the links from smurfette pages

--- a/index.html
+++ b/index.html
@@ -29,25 +29,21 @@
 	<!-- Main Element -->
 	<main>
 		<h2>Home - Welcome to company</h2>
-		<p>Ut eget tempus enim. Sed varius tristique ante, eu cursus nisi. Duis elementum leo nisi, at varius tellus dignissim id. Suspendisse potenti. Phasellus vulputate mi vitae ullamcorper elementum. Cras maximus feugiat lectus, vitae dignissim eros finibus sollicitudin. Fusce eu hendrerit sem. Proin sed massa quis velit euismod convallis. Etiam ac sagittis tortor, at aliquam sapien. Nam maximus velit rutrum risus dignissim rutrum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis justo urna, varius vitae quam eu, pulvinar tincidunt erat. Maecenas suscipit enim facilisis mi tempus auctor. Pellentesque non sem et odio varius tincidunt quis placerat sapien. In in tempus tortor. Suspendisse felis diam, aliquam quis venenatis ac, hendrerit quis odio. Nam congue egestas sapien vel luctus. Phasellus eget mollis eros. Nam venenatis lectus at odio tincidunt cursus. Nulla tristique augue a dolor fermentum hendrerit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam vestibulum consequat lorem, id pulvinar metus efficitur vestibulum. Nulla accumsan suscipit dui at gravida. Morbi augue lacus, porttitor tristique dui a, volutpat maximus erat.</p>
+
+		<p>Nulla et tincidunt mi, id ultricies nisl. Morbi quis elementum nunc, sit amet molestie orci. Integer sed nisl vitae ipsum varius semper. Cras eget orci semper, pellentesque leo non, dapibus neque. Sed quis imperdiet sem. Nullam auctor suscipit malesuada. Aliquam sapien nulla, semper sit amet purus ac, ornare mollis lorem.</p>
+
+		<p>Etiam ultrices imperdiet velit in malesuada. Donec maximus pharetra condimentum. Vestibulum tincidunt tempor odio. Sed luctus, nisl quis aliquam fringilla, ipsum dui pharetra ante, ac elementum nunc quam sit amet augue. Mauris volutpat id augue ut tincidunt. Curabitur tempor suscipit velit sed porta. Sed condimentum nisi nec tempor mollis. Praesent non dui mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis iaculis neque nisi, eget fringilla nunc ultrices et. Sed et nulla at urna lobortis convallis. Praesent rutrum vulputate odio, in egestas mi finibus a. Aliquam in tempus lectus.</p>
 		
 
-		<!-- Characteristics -->
+		<!-- Pages -->
 		<h2>Company's Pages</h2>
 		<ul>
 			<li><a href="https://google.nl">Products</a></li>
 			<li><a href="https://google.nl">About us</a></li>
 			<li><a href="https://google.nl">Contact</a></li>
 		</ul>
-
-		<!-- Friends -->
-		<h2>Company's Friends</h2>
-		<p>Company has awesome friends. The best one is papa Smurf. Click on the links below to read more about them:</p>
-		<ul>
-			<li><a target="_blank" href="https://nl.wikipedia.org/wiki/Grote_Smurf">Grote Smurf</a></li>
-			<li><a target="_blank" href="brilsmurf wacht op mij">Brilsmurf</a></li>
-			<li><a target="_blank" href="https://nl.wikipedia.org/wiki/Klungelsmurf">Klungelsmurf</a></li>
-		</ul>
+		
 	</main>
 
 	<!-- Footer Element -->
